# pywstl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: basic_usage.py
pywstl/: __init__.py  backend.py  intervals.py  operations.py  signals.py  utils.py  validation.py  wstlbase.py  wstlpy.py  wstltorch.py
tests/: test_backend.py  test_errors.py  test_intervals.py  test_operations.py  test_robustness.py  test_set_weights.py  test_signals.py  test_utils.py  test_wstltorch.py  test_wstltorch_robustness.py
